--- a/src/sass/elements/_right--chats.scss
+++ b/src/sass/elements/_right--chats.scss
@@ -304,7 +304,8 @@
         [data-testid="writing-block-container"] {
 
             &,
-            [class*="dark:bg-[#2a2a2a]"] {
+            [class*="dark:bg-[#2a2a2a]"],
+            .writing-block-editor {
                 background: var(--c-bg-cm) !important;
             }
         }
